# swagger/v1/swagger.yaml
@@ -126,17 +126,6 @@ paths:
           - room
           - studio
           - apartment
-      - name: room_type
-        in: query
-        type: string
-        required: false
-        description: Alternative parameter name for room type (alias of type)
-        schema:
-          type: string
-          enum:
-          - room
-          - studio
-          - apartment
       responses:
         '200':
           description: successful - no type specified
@@ -146,7 +135,7 @@ paths:
                 example_random_image:
                   value:
                     image_url: http://ecogreen-saigon.vn/uploads/phong-tro-la-loai-hinh-nha-o-pho-bien-gia-re-tien-loi-cho-sinh-vien-va-nguoi-di-lam.png
-                    room_type: room
+                    type: room
                     timestamp: '2024-01-15T10:30:00Z'
               schema:
                 type: object
@@ -154,7 +143,7 @@ paths:
                   image_url:
                     type: string
                     example: http://ecogreen-saigon.vn/uploads/phong-tro-la-loai-hinh-nha-o-pho-bien-gia-re-tien-loi-cho-sinh-vien-va-nguoi-di-lam.png
-                  room_type:
+                  type:
                     type: string
                     nullable: true
                     example: room
